--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-torch>=1.9.0
-transformers>=4.20.0
-datasets>=2.0.0
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
+torch>=2.0.0
+transformers>=4.30.0
+datasets>=2.10.0
+pandas>=1.5.0
+numpy>=1.24.0
+scikit-learn>=1.2.0
 accelerate>=0.20.0
-tokenizers>=0.13.0 
+tokenizers>=0.13.0
+wandb>=0.15.0
+safetensors>=0.3.0 
